// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateInflation with normalized fixtures > legacy-empty deterministic snapshot 1`] = `
{
  "auction_value_note": "auction_value is the official player dollar valuation for external evaluation and benchmarks. It always equals adjusted_value (league-wide auction dollars from the active inflation_model). The default inflation model is replacement_slots_v2.",
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "draftable_player_ids": [
    "1",
  ],
  "draftable_pool_size": 1,
  "edge_note": "edge is team_adjusted_value minus recommended_bid (marginal roster worth versus the bid anchor). Negative edge on stars is common when recommended_bid is intentionally above auction_value; edge is not 'profit versus fair market value.' Use auction_value for league-wide FMV and cross-roster comparisons.",
  "engine_contract_version": "1",
  "fallback_reason": "no_surplus_mass",
  "inflation_bounded_by": "none",
  "inflation_factor": 0,
  "inflation_model": "replacement_slots_v2",
  "inflation_raw": 0,
  "min_bid": 1,
  "phase_indicator": "early",
  "players_remaining": 2,
  "pool_value_remaining": 0,
  "recommended_bid_note": "recommended_bid is a draftroom bid anchor (not league-wide FMV). The clearing step blends auction_value (a=adjusted_value) toward list baseline_value (r) via a phase/depth lambda L: initialClearingPrice = a + L*(r-a), then hitter floors/caps/elite boosts and isotonic smoothing within hitters and pitchers. When r>>a for stars, recommended_bid can sit well above auction_value by design — treat it as an aggressive ceiling / bidding discipline signal, not the official dollar.",
  "remaining_slots": 36,
  "replacement_values_by_slot_or_position": {
    "OF": 40,
  },
  "surplus_cash": 3084,
  "team_adjusted_value_note": "team_adjusted_value is marginal worth to the requesting team's roster and budget context (need, dollars per open slot vs peers, remaining-slot scarcity, replacement drop-off). It is not a league-universal player price and must not replace auction_value for cross-player evaluation or leaderboards.",
  "total_budget_remaining": 3120,
  "total_surplus_mass": 0,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 40,
      "auction_rank": 1,
      "auction_tier": 1,
      "auction_value": 40,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 1,
      "baseline_tier": 1,
      "baseline_value": 40,
      "catalog_rank": 5,
      "catalog_tier": 1,
      "edge": -4,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "name": "Alpha",
      "player_id": "1",
      "position": "OF",
      "recommended_bid": 44,
      "scarcity_adjustment": 0,
      "team": "NYY",
      "team_adjusted_value": 40,
    },
    {
      "adjusted_value": 12,
      "auction_rank": 2,
      "auction_tier": 3,
      "auction_value": 12,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 2,
      "baseline_tier": 3,
      "baseline_value": 12,
      "catalog_rank": 50,
      "catalog_tier": 3,
      "edge": 0,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 12,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 12,
    },
  ],
}
`;

exports[`calculateInflation with normalized fixtures > nested-after-pick applies player_ids filter 1`] = `
{
  "auction_value_note": "auction_value is the official player dollar valuation for external evaluation and benchmarks. It always equals adjusted_value (league-wide auction dollars from the active inflation_model). The default inflation model is replacement_slots_v2.",
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "draftable_player_ids": [],
  "draftable_pool_size": 0,
  "edge_note": "edge is team_adjusted_value minus recommended_bid (marginal roster worth versus the bid anchor). Negative edge on stars is common when recommended_bid is intentionally above auction_value; edge is not 'profit versus fair market value.' Use auction_value for league-wide FMV and cross-roster comparisons.",
  "engine_contract_version": "1",
  "fallback_reason": "no_surplus_mass",
  "inflation_bounded_by": "none",
  "inflation_factor": 0,
  "inflation_model": "replacement_slots_v2",
  "inflation_raw": 0,
  "min_bid": 1,
  "phase_indicator": "early",
  "players_remaining": 1,
  "pool_value_remaining": 0,
  "recommended_bid_note": "recommended_bid is a draftroom bid anchor (not league-wide FMV). The clearing step blends auction_value (a=adjusted_value) toward list baseline_value (r) via a phase/depth lambda L: initialClearingPrice = a + L*(r-a), then hitter floors/caps/elite boosts and isotonic smoothing within hitters and pitchers. When r>>a for stars, recommended_bid can sit well above auction_value by design — treat it as an aggressive ceiling / bidding discipline signal, not the official dollar.",
  "remaining_slots": 35,
  "replacement_values_by_slot_or_position": {
    "OF": 0,
  },
  "surplus_cash": 3030,
  "team_adjusted_value_note": "team_adjusted_value is marginal worth to the requesting team's roster and budget context (need, dollars per open slot vs peers, remaining-slot scarcity, replacement drop-off). It is not a league-universal player price and must not replace auction_value for cross-player evaluation or leaderboards.",
  "total_budget_remaining": 3065,
  "total_surplus_mass": 0,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 12,
      "auction_rank": 1,
      "auction_tier": 1,
      "auction_value": 12,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 1,
      "baseline_tier": 1,
      "baseline_value": 12,
      "catalog_rank": 50,
      "catalog_tier": 3,
      "edge": -0.05,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 12,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 11.95,
    },
  ],
}
`;

exports[`parseValuationRequest + root fixtures > normalizes legacy-empty.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": undefined,
  "deterministic": false,
  "drafted_players": [],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": undefined,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": undefined,
  "position_overrides": undefined,
  "pre_draft_rosters": undefined,
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "0.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-after-pick.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "after_pick_1",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": false,
      "name": "Star Player",
      "paid": 55,
      "pick_number": 1,
      "player_id": "1",
      "position": "OF",
      "positions": [
        "OF",
        "DH",
      ],
      "team": "NYY",
      "team_id": "team_1",
    },
  ],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": undefined,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": [
    "2",
  ],
  "pos_eligibility_threshold": undefined,
  "position_overrides": undefined,
  "pre_draft_rosters": undefined,
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-pre-draft.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "pre_draft",
  "deterministic": true,
  "drafted_players": [],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": 0.65,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": {},
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": 5,
  "position_overrides": undefined,
  "pre_draft_rosters": {
    "team_1": [],
  },
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": "5x5",
  "seed": undefined,
  "taxi": {},
  "total_budget": 260,
  "user_team_id": undefined,
}
`;
